cpp.output
Terminals unused in grammar

    INCLUDE


State 107 conflicts: 2 shift/reduce
State 194 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | constant
    3                   | LROUND expression RROUND
    4                   | lambda_expression

    5 constant: DECIMAL_LITERAL
    6         | CHARACTER_LITERAL
    7         | STRING_LITERAL
    8         | EXPONENT_LITERAL
    9         | DOUBLE_LITERAL
   10         | NULLPTR
   11         | TRUE
   12         | FALSE

   13 postfix_expression: primary_expression
   14                   | postfix_expression LSQUARE expression RSQUARE
   15                   | postfix_expression LROUND RROUND
   16                   | postfix_expression LROUND argument_expression_list RROUND
   17                   | postfix_expression DOT IDENTIFIER
   18                   | postfix_expression ARROW IDENTIFIER
   19                   | postfix_expression INCREMENT
   20                   | postfix_expression DECREMENT

   21 argument_expression_list: assignment_expression
   22                         | argument_expression_list COMMA assignment_expression

   23 unary_expression: postfix_expression
   24                 | INCREMENT unary_expression
   25                 | DECREMENT unary_expression
   26                 | unary_operator cast_expression
   27                 | SIZEOF unary_expression
   28                 | SIZEOF LROUND type_name RROUND
   29                 | delete_expression
   30                 | new_expression

   31 unary_operator: BITWISE_AND
   32               | STAR
   33               | PLUS
   34               | MINUS
   35               | TILDE
   36               | LOGICAL_NOT

   37 new_expression: NEW type_specifier pointer_opt new_declarator scalar_new_init_opt
   38               | NEW type_specifier new_declarator scalar_new_init_opt
   39               | NEW type_specifier pointer_opt scalar_new_init_opt
   40               | NEW type_specifier pointer_opt new_declarator
   41               | NEW type_specifier pointer_opt
   42               | NEW type_specifier new_declarator
   43               | NEW type_specifier scalar_new_init_opt
   44               | NEW type_specifier

   45 pointer_opt: STAR pointer_opt
   46            | STAR

   47 new_declarator: LSQUARE expression RSQUARE
   48               | new_declarator LSQUARE expression RSQUARE

   49 scalar_new_init_opt: LROUND RROUND
   50                    | LROUND argument_expression_list RROUND

   51 delete_expression: DELETE LSQUARE RSQUARE cast_expression
   52                  | DELETE cast_expression

   53 cast_expression: unary_expression
   54                | LROUND type_name RROUND cast_expression

   55 multiplicative_expression: cast_expression
   56                          | multiplicative_expression STAR cast_expression
   57                          | multiplicative_expression DIVIDE cast_expression
   58                          | multiplicative_expression MODULUS cast_expression

   59 additive_expression: multiplicative_expression
   60                    | additive_expression PLUS multiplicative_expression
   61                    | additive_expression MINUS multiplicative_expression

   62 shift_expression: additive_expression
   63                 | shift_expression LEFT_SHIFT additive_expression
   64                 | shift_expression RIGHT_SHIFT additive_expression

   65 relational_expression: shift_expression
   66                      | relational_expression GREATER_THAN shift_expression
   67                      | relational_expression LESS_THAN shift_expression
   68                      | relational_expression LESS_EQUAL shift_expression
   69                      | relational_expression GREATER_EQUAL shift_expression

   70 equality_expression: relational_expression
   71                    | equality_expression EQUAL relational_expression
   72                    | equality_expression NOT_EQUAL relational_expression

   73 and_expression: equality_expression
   74               | and_expression BITWISE_AND equality_expression

   75 exclusive_or_expression: and_expression
   76                        | exclusive_or_expression BITWISE_XOR and_expression

   77 inclusive_or_expression: exclusive_or_expression
   78                        | inclusive_or_expression BITWISE_OR exclusive_or_expression

   79 logical_and_expression: inclusive_or_expression
   80                       | logical_and_expression LOGICAL_AND inclusive_or_expression

   81 logical_or_expression: logical_and_expression
   82                      | logical_or_expression LOGICAL_OR logical_and_expression

   83 conditional_expression: logical_or_expression
   84                       | logical_or_expression QUESTION_MARK expression COLON conditional_expression

   85 assignment_expression: conditional_expression
   86                      | unary_expression assignment_operator assignment_expression

   87 assignment_operator: ASSIGN
   88                    | STAR_EQUAL
   89                    | DIV_EQUAL
   90                    | MOD_EQUAL
   91                    | PLUS_EQUAL
   92                    | MINUS_EQUAL
   93                    | LEFT_SHIFT_EQ
   94                    | RIGHT_SHIFT_EQ
   95                    | AND_EQUAL
   96                    | XOR_EQUAL
   97                    | OR_EQUAL

   98 expression: assignment_expression
   99           | expression COMMA assignment_expression

  100 constant_expression: conditional_expression

  101 declaration: declaration_specifiers SEMICOLON
  102            | declaration_specifiers init_declarator_list SEMICOLON

  103 declaration_specifiers: storage_class_specifier
  104                       | storage_class_specifier declaration_specifiers
  105                       | type_specifier
  106                       | type_specifier declaration_specifiers
  107                       | type_qualifier
  108                       | type_qualifier declaration_specifiers

  109 init_declarator_list: init_declarator
  110                     | init_declarator_list COMMA init_declarator

  111 init_declarator: declarator
  112                | declarator ASSIGN initializer

  113 storage_class_specifier: TYPEDEF
  114                        | STATIC
  115                        | AUTO

  116 type_specifier: VOID
  117               | CHAR
  118               | INT
  119               | LONG
  120               | DOUBLE
  121               | BOOL
  122               | STRING
  123               | TYPE_NAME

  124 struct_or_class_specifier: struct_or_class IDENTIFIER LCURLY struct_or_class_member_list RCURLY
  125                          | struct_or_class IDENTIFIER

  126 struct_or_class: STRUCT
  127                | CLASS

  128 struct_or_class_member_list: struct_or_class_member
  129                            | struct_or_class_member_list struct_or_class_member

  130 struct_or_class_member: access_specifier_label
  131                       | member_declaration

  132 access_specifier_label: PUBLIC COLON
  133                       | PRIVATE COLON
  134                       | PROTECTED COLON

  135 member_declaration: specifier_qualifier_list struct_declarator_list SEMICOLON
  136                   | specifier_qualifier_list SEMICOLON
  137                   | specifier_qualifier_list declarator compound_statement
  138                   | struct_or_class_specifier SEMICOLON
  139                   | SEMICOLON
  140                   | constructor_definition
  141                   | destructor_definition

  142 constructor_definition: IDENTIFIER LROUND parameter_list RROUND compound_statement
  143                       | IDENTIFIER LROUND RROUND compound_statement

  144 destructor_definition: TILDE IDENTIFIER LROUND RROUND compound_statement

  145 struct_declarator_list: struct_declarator
  146                       | struct_declarator_list COMMA struct_declarator

  147 struct_declarator: init_declarator

  148 specifier_qualifier_list: type_specifier specifier_qualifier_list
  149                         | type_specifier
  150                         | type_qualifier specifier_qualifier_list
  151                         | type_qualifier

  152 type_qualifier: CONST

  153 declarator: pointer direct_declarator
  154           | direct_declarator

  155 direct_declarator: IDENTIFIER
  156                  | LROUND declarator RROUND
  157                  | direct_declarator LSQUARE constant_expression RSQUARE
  158                  | direct_declarator LSQUARE RSQUARE
  159                  | direct_declarator LROUND parameter_type_list RROUND
  160                  | direct_declarator LROUND identifier_list RROUND
  161                  | direct_declarator LROUND RROUND

  162 pointer: STAR
  163        | STAR type_qualifier_list
  164        | STAR pointer
  165        | STAR type_qualifier_list pointer

  166 type_qualifier_list: type_qualifier
  167                    | type_qualifier_list type_qualifier

  168 parameter_type_list: parameter_list

  169 parameter_list: parameter_declaration
  170               | parameter_list COMMA parameter_declaration

  171 parameter_declaration: declaration_specifiers declarator
  172                      | declaration_specifiers abstract_declarator
  173                      | declaration_specifiers

  174 identifier_list: IDENTIFIER
  175                | identifier_list COMMA IDENTIFIER

  176 type_name: specifier_qualifier_list
  177          | specifier_qualifier_list abstract_declarator

  178 abstract_declarator: pointer
  179                    | direct_abstract_declarator
  180                    | pointer direct_abstract_declarator

  181 direct_abstract_declarator: LROUND abstract_declarator RROUND
  182                           | LSQUARE RSQUARE
  183                           | LSQUARE constant_expression RSQUARE
  184                           | direct_abstract_declarator LSQUARE RSQUARE
  185                           | direct_abstract_declarator LSQUARE constant_expression RSQUARE
  186                           | LROUND RROUND
  187                           | LROUND parameter_type_list RROUND
  188                           | direct_abstract_declarator LROUND RROUND
  189                           | direct_abstract_declarator LROUND parameter_type_list RROUND

  190 initializer: assignment_expression
  191            | LCURLY initializer_list RCURLY
  192            | LCURLY initializer_list COMMA RCURLY

  193 initializer_list: initializer
  194                 | initializer_list COMMA initializer

  195 statement: labeled_statement
  196          | compound_statement
  197          | expression_statement
  198          | selection_statement
  199          | iteration_statement
  200          | jump_statement
  201          | io_statement

  202 io_statement: cout_expression SEMICOLON
  203             | cin_expression SEMICOLON

  204 cout_expression: COUT insertion_list

  205 insertion_list: LEFT_SHIFT assignment_expression
  206               | LEFT_SHIFT ENDL
  207               | insertion_list LEFT_SHIFT ENDL
  208               | insertion_list LEFT_SHIFT assignment_expression

  209 cin_expression: CIN extraction_list

  210 extraction_list: RIGHT_SHIFT assignment_expression
  211                | extraction_list RIGHT_SHIFT assignment_expression

  212 labeled_statement: IDENTIFIER COLON statement
  213                  | CASE constant_expression COLON statement
  214                  | DEFAULT COLON statement

  215 compound_statement: LCURLY RCURLY
  216                   | LCURLY statement_list RCURLY
  217                   | LCURLY declaration_list RCURLY
  218                   | LCURLY declaration_list statement_list RCURLY

  219 statement_list: statement
  220               | statement_list statement

  221 expression_statement: SEMICOLON
  222                     | expression SEMICOLON

  223 selection_statement: IF LROUND expression RROUND statement
  224                    | IF LROUND expression RROUND statement ELSE statement
  225                    | SWITCH LROUND expression RROUND statement

  226 iteration_statement: WHILE LROUND expression RROUND statement
  227                    | UNTIL LROUND expression RROUND statement
  228                    | DO statement WHILE LROUND expression RROUND SEMICOLON
  229                    | FOR LROUND for_init_statement expression_statement RROUND statement
  230                    | FOR LROUND for_init_statement expression_statement expression RROUND statement

  231 for_init_statement: expression_statement
  232                   | declaration

  233 jump_statement: GOTO IDENTIFIER SEMICOLON
  234               | CONTINUE SEMICOLON
  235               | BREAK SEMICOLON
  236               | RETURN SEMICOLON
  237               | RETURN expression SEMICOLON

  238 translation_unit: external_declaration
  239                 | translation_unit external_declaration

  240 external_declaration: function_definition
  241                     | struct_or_class_specifier SEMICOLON
  242                     | declaration

  243 declaration_list: declaration
  244                 | declaration_list declaration

  245 function_definition: declaration_specifiers declarator compound_statement
  246                    | declarator compound_statement

  247 lambda_expression: LSQUARE lambda_capture_clause RSQUARE lambda_declarator compound_statement
  248                  | LSQUARE lambda_capture_clause RSQUARE compound_statement

  249 lambda_declarator: lambda_parameter_clause trailing_return_opt

  250 lambda_parameter_clause: LROUND RROUND
  251                        | LROUND parameter_list RROUND

  252 trailing_return_opt: ε
  253                    | ARROW type_name

  254 lambda_capture_clause: MINUS
  255                      | ASSIGN
  256                      | capture_list
  257                      | capture_list COMMA ASSIGN
  258                      | ASSIGN COMMA capture_list

  259 capture_list: IDENTIFIER
  260             | capture_list COMMA IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INCLUDE <str> (258)
    TYPEDEF <str> (259) 113
    TYPE_NAME <str> (260) 123
    PLUS <str> (261) 33 60
    MINUS <str> (262) 34 61 254
    STAR <str> (263) 32 45 46 56 162 163 164 165
    DIVIDE <str> (264) 57
    MODULUS <str> (265) 58
    ASSIGN <str> (266) 87 112 255 257 258
    INCREMENT <str> (267) 19 24
    DECREMENT <str> (268) 20 25
    EQUAL <str> (269) 71
    NOT_EQUAL <str> (270) 72
    LESS_THAN <str> (271) 67
    GREATER_THAN <str> (272) 66
    LESS_EQUAL <str> (273) 68
    GREATER_EQUAL <str> (274) 69
    BITWISE_AND <str> (275) 31 74
    BITWISE_OR <str> (276) 78
    BITWISE_XOR <str> (277) 76
    LEFT_SHIFT <str> (278) 63 205 206 207 208
    RIGHT_SHIFT <str> (279) 64 210 211
    ARROW <str> (280) 18 253
    LOGICAL_NOT <str> (281) 36
    LOGICAL_AND <str> (282) 80
    LOGICAL_OR <str> (283) 82
    PLUS_EQUAL <str> (284) 91
    MINUS_EQUAL <str> (285) 92
    STAR_EQUAL <str> (286) 88
    DIV_EQUAL <str> (287) 89
    MOD_EQUAL <str> (288) 90
    AND_EQUAL <str> (289) 95
    OR_EQUAL <str> (290) 97
    XOR_EQUAL <str> (291) 96
    LEFT_SHIFT_EQ <str> (292) 93
    RIGHT_SHIFT_EQ <str> (293) 94
    LROUND <str> (294) 3 15 16 28 49 50 54 142 143 144 156 159 160 161 181 186 187 188 189 223 224 225 226 227 228 229 230 250 251
    RROUND <str> (295) 3 15 16 28 49 50 54 142 143 144 156 159 160 161 181 186 187 188 189 223 224 225 226 227 228 229 230 250 251
    LCURLY <str> (296) 124 191 192 215 216 217 218
    RCURLY <str> (297) 124 191 192 215 216 217 218
    LSQUARE <str> (298) 14 47 48 51 157 158 182 183 184 185 247 248
    RSQUARE <str> (299) 14 47 48 51 157 158 182 183 184 185 247 248
    SEMICOLON <str> (300) 101 102 135 136 138 139 202 203 221 222 228 233 234 235 236 237 241
    COLON <str> (301) 84 132 133 134 212 213 214
    COMMA <str> (302) 22 99 110 146 170 175 192 194 257 258 260
    DOT <str> (303) 17
    QUESTION_MARK <str> (304) 84
    TILDE <str> (305) 35 144
    IF <str> (306) 223 224
    ELSE <str> (307) 224
    SWITCH <str> (308) 225
    CASE <str> (309) 213
    DEFAULT <str> (310) 214
    WHILE <str> (311) 226 228
    DO <str> (312) 228
    FOR <str> (313) 229 230
    GOTO <str> (314) 233
    CONTINUE <str> (315) 234
    BREAK <str> (316) 235
    RETURN <str> (317) 236 237
    UNTIL <str> (318) 227
    SIZEOF <str> (319) 27 28
    VOID <str> (320) 116
    INT <str> (321) 118
    DOUBLE <str> (322) 120
    CHAR <str> (323) 117
    BOOL <str> (324) 121
    STRING <str> (325) 122
    LONG <str> (326) 119
    TRUE <str> (327) 11
    FALSE <str> (328) 12
    NULLPTR <str> (329) 10
    AUTO <str> (330) 115
    STATIC <str> (331) 114
    CONST <str> (332) 152
    CLASS <str> (333) 127
    STRUCT <str> (334) 126
    PUBLIC <str> (335) 132
    PRIVATE <str> (336) 133
    PROTECTED <str> (337) 134
    DELETE <str> (338) 51 52
    NEW <str> (339) 37 38 39 40 41 42 43 44
    CIN <str> (340) 209
    COUT <str> (341) 204
    ENDL <str> (342) 206 207
    IDENTIFIER <str> (343) 1 17 18 124 125 142 143 144 155 174 175 212 233 259 260
    DECIMAL_LITERAL <str> (344) 5
    DOUBLE_LITERAL <str> (345) 9
    EXPONENT_LITERAL <str> (346) 8
    CHARACTER_LITERAL <str> (347) 6
    STRING_LITERAL <str> (348) 7
    LOWER_THAN_ELSE (349)


Nonterminals, with rules where they appear

    $accept (95)
        on left: 0
    primary_expression (96)
        on left: 1 2 3 4
        on right: 13
    constant (97)
        on left: 5 6 7 8 9 10 11 12
        on right: 2
    postfix_expression (98)
        on left: 13 14 15 16 17 18 19 20
        on right: 14 15 16 17 18 19 20 23
    argument_expression_list (99)
        on left: 21 22
        on right: 16 22 50
    unary_expression (100)
        on left: 23 24 25 26 27 28 29 30
        on right: 24 25 27 53 86
    unary_operator (101)
        on left: 31 32 33 34 35 36
        on right: 26
    new_expression (102)
        on left: 37 38 39 40 41 42 43 44
        on right: 30
    pointer_opt (103)
        on left: 45 46
        on right: 37 39 40 41 45
    new_declarator (104)
        on left: 47 48
        on right: 37 38 40 42 48
    scalar_new_init_opt (105)
        on left: 49 50
        on right: 37 38 39 43
    delete_expression (106)
        on left: 51 52
        on right: 29
    cast_expression (107)
        on left: 53 54
        on right: 26 51 52 54 55 56 57 58
    multiplicative_expression (108)
        on left: 55 56 57 58
        on right: 56 57 58 59 60 61
    additive_expression (109)
        on left: 59 60 61
        on right: 60 61 62 63 64
    shift_expression (110)
        on left: 62 63 64
        on right: 63 64 65 66 67 68 69
    relational_expression (111)
        on left: 65 66 67 68 69
        on right: 66 67 68 69 70 71 72
    equality_expression (112)
        on left: 70 71 72
        on right: 71 72 73 74
    and_expression (113)
        on left: 73 74
        on right: 74 75 76
    exclusive_or_expression (114)
        on left: 75 76
        on right: 76 77 78
    inclusive_or_expression (115)
        on left: 77 78
        on right: 78 79 80
    logical_and_expression (116)
        on left: 79 80
        on right: 80 81 82
    logical_or_expression (117)
        on left: 81 82
        on right: 82 83 84
    conditional_expression (118)
        on left: 83 84
        on right: 84 85 100
    assignment_expression (119)
        on left: 85 86
        on right: 21 22 86 98 99 190 205 208 210 211
    assignment_operator (120)
        on left: 87 88 89 90 91 92 93 94 95 96 97
        on right: 86
    expression (121)
        on left: 98 99
        on right: 3 14 47 48 84 99 222 223 224 225 226 227 228 230 237
    constant_expression (122)
        on left: 100
        on right: 157 183 185 213
    declaration (123)
        on left: 101 102
        on right: 232 242 243 244
    declaration_specifiers (124)
        on left: 103 104 105 106 107 108
        on right: 101 102 104 106 108 171 172 173 245
    init_declarator_list (125)
        on left: 109 110
        on right: 102 110
    init_declarator (126)
        on left: 111 112
        on right: 109 110 147
    storage_class_specifier (127)
        on left: 113 114 115
        on right: 103 104
    type_specifier (128)
        on left: 116 117 118 119 120 121 122 123
        on right: 37 38 39 40 41 42 43 44 105 106 148 149
    struct_or_class_specifier (129)
        on left: 124 125
        on right: 138 241
    struct_or_class (130)
        on left: 126 127
        on right: 124 125
    struct_or_class_member_list (131)
        on left: 128 129
        on right: 124 129
    struct_or_class_member (132)
        on left: 130 131
        on right: 128 129
    access_specifier_label (133)
        on left: 132 133 134
        on right: 130
    member_declaration (134)
        on left: 135 136 137 138 139 140 141
        on right: 131
    constructor_definition (135)
        on left: 142 143
        on right: 140
    destructor_definition (136)
        on left: 144
        on right: 141
    struct_declarator_list (137)
        on left: 145 146
        on right: 135 146
    struct_declarator (138)
        on left: 147
        on right: 145 146
    specifier_qualifier_list (139)
        on left: 148 149 150 151
        on right: 135 136 137 148 150 176 177
    type_qualifier (140)
        on left: 152
        on right: 107 108 150 151 166 167
    declarator (141)
        on left: 153 154
        on right: 111 112 137 156 171 245 246
    direct_declarator (142)
        on left: 155 156 157 158 159 160 161
        on right: 153 154 157 158 159 160 161
    pointer (143)
        on left: 162 163 164 165
        on right: 153 164 165 178 180
    type_qualifier_list (144)
        on left: 166 167
        on right: 163 165 167
    parameter_type_list (145)
        on left: 168
        on right: 159 187 189
    parameter_list (146)
        on left: 169 170
        on right: 142 168 170 251
    parameter_declaration (147)
        on left: 171 172 173
        on right: 169 170
    identifier_list (148)
        on left: 174 175
        on right: 160 175
    type_name (149)
        on left: 176 177
        on right: 28 54 253
    abstract_declarator (150)
        on left: 178 179 180
        on right: 172 177 181
    direct_abstract_declarator (151)
        on left: 181 182 183 184 185 186 187 188 189
        on right: 179 180 184 185 188 189
    initializer (152)
        on left: 190 191 192
        on right: 112 193 194
    initializer_list (153)
        on left: 193 194
        on right: 191 192 194
    statement (154)
        on left: 195 196 197 198 199 200 201
        on right: 212 213 214 219 220 223 224 225 226 227 228 229 230
    io_statement (155)
        on left: 202 203
        on right: 201
    cout_expression (156)
        on left: 204
        on right: 202
    insertion_list (157)
        on left: 205 206 207 208
        on right: 204 207 208
    cin_expression (158)
        on left: 209
        on right: 203
    extraction_list (159)
        on left: 210 211
        on right: 209 211
    labeled_statement (160)
        on left: 212 213 214
        on right: 195
    compound_statement (161)
        on left: 215 216 217 218
        on right: 137 142 143 144 196 245 246 247 248
    statement_list (162)
        on left: 219 220
        on right: 216 218 220
    expression_statement (163)
        on left: 221 222
        on right: 197 229 230 231
    selection_statement (164)
        on left: 223 224 225
        on right: 198
    iteration_statement (165)
        on left: 226 227 228 229 230
        on right: 199
    for_init_statement (166)
        on left: 231 232
        on right: 229 230
    jump_statement (167)
        on left: 233 234 235 236 237
        on right: 200
    translation_unit (168)
        on left: 238 239
        on right: 0 239
    external_declaration (169)
        on left: 240 241 242
        on right: 238 239
    declaration_list (170)
        on left: 243 244
        on right: 217 218 244
    function_definition (171)
        on left: 245 246
        on right: 240
    lambda_expression (172)
        on left: 247 248
        on right: 4
    lambda_declarator (173)
        on left: 249
        on right: 247
    lambda_parameter_clause (174)
        on left: 250 251
        on right: 249
    trailing_return_opt (175)
        on left: 252 253
        on right: 249
    lambda_capture_clause (176)
        on left: 254 255 256 257 258
        on right: 247 248
    capture_list (177)
        on left: 259 260
        on right: 256 257 258 260


State 0

    0 $accept: • translation_unit $end

    TYPEDEF     shift, and go to state 1
    TYPE_NAME   shift, and go to state 2
    STAR        shift, and go to state 3
    LROUND      shift, and go to state 4
    VOID        shift, and go to state 5
    INT         shift, and go to state 6
    DOUBLE      shift, and go to state 7
    CHAR        shift, and go to state 8
    BOOL        shift, and go to state 9
    STRING      shift, and go to state 10
    LONG        shift, and go to state 11
    AUTO        shift, and go to state 12
    STATIC      shift, and go to state 13
    CONST       shift, and go to state 14
    CLASS       shift, and go to state 15
    STRUCT      shift, and go to state 16
    IDENTIFIER  shift, and go to state 17

    declaration                go to state 18
    declaration_specifiers     go to state 19
    storage_class_specifier    go to state 20
    type_specifier             go to state 21
    struct_or_class_specifier  go to state 22
    struct_or_class            go to state 23
    type_qualifier             go to state 24
    declarator                 go to state 25
    direct_declarator          go to state 26
    pointer                    go to state 27
    translation_unit           go to state 28
    external_declaration       go to state 29
    function_definition        go to state 30


State 1

  113 storage_class_specifier: TYPEDEF •

    $default  reduce using rule 113 (storage_class_specifier)


State 2

  123 type_specifier: TYPE_NAME •

    $default  reduce using rule 123 (type_specifier)


State 3

  162 pointer: STAR •
  163        | STAR • type_qualifier_list
  164        | STAR • pointer
  165        | STAR • type_qualifier_list pointer

    STAR   shift, and go to state 3
    CONST  shift, and go to state 14

    $default  reduce using rule 162 (pointer)

    type_qualifier       go to state 31
    pointer              go to state 32
    type_qualifier_list  go to state 33


State 4

  156 direct_declarator: LROUND • declarator RROUND

    STAR        shift, and go to state 3
    LROUND      shift, and go to state 4
    IDENTIFIER  shift, and go to state 17

    declarator         go to state 34
    direct_declarator  go to state 26
    pointer            go to state 27


State 5

  116 type_specifier: VOID •

    $default  reduce using rule 116 (type_specifier)


State 6

  118 type_specifier: INT •

    $default  reduce using rule 118 (type_specifier)


State 7

  120 type_specifier: DOUBLE •

    $default  reduce using rule 120 (type_specifier)


State 8

  117 type_specifier: CHAR •

    $default  reduce using rule 117 (type_specifier)


State 9

  121 type_specifier: BOOL •

    $default  reduce using rule 121 (type_specifier)


State 10

  122 type_specifier: STRING •

    $default  reduce using rule 122 (type_specifier)


State 11

  119 type_specifier: LONG •

    $default  reduce using rule 119 (type_specifier)


State 12

  115 storage_class_specifier: AUTO •

    $default  reduce using rule 115 (storage_class_specifier)


State 13

  114 storage_class_specifier: STATIC •

    $default  reduce using rule 114 (storage_class_specifier)


State 14

  152 type_qualifier: CONST •

    $default  reduce using rule 152 (type_qualifier)


State 15

  127 struct_or_class: CLASS •

    $default  reduce using rule 127 (struct_or_class)


State 16

  126 struct_or_class: STRUCT •

    $default  reduce using rule 126 (struct_or_class)


State 17

  155 direct_declarator: IDENTIFIER •

    $default  reduce using rule 155 (direct_declarator)


State 18

  242 external_declaration: declaration •

    $default  reduce using rule 242 (external_declaration)


State 19

  101 declaration: declaration_specifiers • SEMICOLON
  102            | declaration_specifiers • init_declarator_list SEMICOLON
  245 function_definition: declaration_specifiers • declarator compound_statement

    STAR        shift, and go to state 3
    LROUND      shift, and go to state 4
    SEMICOLON   shift, and go to state 35
    IDENTIFIER  shift, and go to state 17

    init_declarator_list  go to state 36
    init_declarator       go to state 37
    declarator            go to state 38
    direct_declarator     go to state 26
    pointer               go to state 27


State 20

  103 declaration_specifiers: storage_class_specifier •
  104                       | storage_class_specifier • declaration_specifiers

    TYPEDEF    shift, and go to state 1
    TYPE_NAME  shift, and go to state 2
    VOID       shift, and go to state 5
    INT        shift, and go to state 6
    DOUBLE     shift, and go to state 7
    CHAR       shift, and go to state 8
    BOOL       shift, and go to state 9
    STRING     shift, and go to state 10
    LONG       shift, and go to state 11
    AUTO       shift, and go to state 12
    STATIC     shift, and go to state 13
    CONST      shift, and go to state 14

    $default  reduce using rule 103 (declaration_specifiers)

    declaration_specifiers   go to state 39
    storage_class_specifier  go to state 20
    type_specifier           go to state 21
    type_qualifier           go to state 24


State 21

  105 declaration_specifiers: type_specifier •
  106                       | type_specifier • declaration_specifiers

    TYPEDEF    shift, and go to state 1
    TYPE_NAME  shift, and go to state 2
    VOID       shift, and go to state 5
    INT        shift, and go to state 6
    DOUBLE     shift, and go to state 7
    CHAR       shift, and go to state 8
    BOOL       shift, and go to state 9
    STRING     shift, and go to state 10
    LONG       shift, and go to state 11
    AUTO       shift, and go to state 12
    STATIC     shift, and go to state 13
    CONST      shift, and go to state 14

    $default  reduce using rule 105 (declaration_specifiers)

    declaration_specifiers   go to state 40
    storage_class_specifier  go to state 20
    type_specifier           go to state 21
    type_qualifier           go to state 24


State 22

  241 external_declaration: struct_or_class_specifier • SEMICOLON

    SEMICOLON  shift, and go to state 41


State 23

  124 struct_or_class_specifier: struct_or_class • IDENTIFIER LCURLY struct_or_class_member_list RCURLY
  125                          | struct_or_class • IDENTIFIER

    IDENTIFIER  shift, and go to state 42


State 24

  107 declaration_specifiers: type_qualifier •
  108                       | type_qualifier • declaration_specifiers

    TYPEDEF    shift, and go to state 1
    TYPE_NAME  shift, and go to state 2
    VOID       shift, and go to state 5
    INT        shift, and go to state 6
    DOUBLE     shift, and go to state 7
    CHAR       shift, and go to state 8
    BOOL       shift, and go to state 9
    STRING     shift, and go to state 10
    LONG       shift, and go to state 11
    AUTO       shift, and go to state 12
    STATIC     shift, and go to state 13
    CONST      shift, and go to state 14

    $default  reduce using rule 107 (declaration_specifiers)

    declaration_specifiers   go to state 43
    storage_class_specifier  go to state 20
    type_specifier           go to state 21
    type_qualifier           go to state 24


State 25

  246 function_definition: declarator • compound_statement

    LCURLY  shift, and go to state 44

    compound_statement  go to state 45


State 26

  154 declarator: direct_declarator •
  157 direct_declarator: direct_declarator • LSQUARE constant_expression RSQUARE
  158                  | direct_declarator • LSQUARE RSQUARE
  159                  | direct_declarator • LROUND parameter_type_list RROUND
  160                  | direct_declarator • LROUND identifier_list RROUND
  161                  | direct_declarator • LROUND RROUND

    LROUND   shift, and go to state 46
    LSQUARE  shift, and go to state 47

    $default  reduce using rule 154 (declarator)


State 27

  153 declarator: pointer • direct_declarator

    LROUND      shift, and go to state 4
    IDENTIFIER  shift, and go to state 17

    direct_declarator  go to state 48


State 28

    0 $accept: translation_unit • $end
  239 translation_unit: translation_unit • external_declaration

    $end        shift, and go to state 49
    TYPEDEF     shift, and go to state 1
    TYPE_NAME   shift, and go to state 2
    STAR        shift, and go to state 3
    LROUND      shift, and go to state 4
    VOID        shift, and go to state 5
    INT         shift, and go to state 6
    DOUBLE      shift, and go to state 7
    CHAR        shift, and go to state 8
    BOOL        shift, and go to state 9
    STRING      shift, and go to state 10
    LONG        shift, and go to state 11
    AUTO        shift, and go to state 12
    STATIC      shift, and go to state 13
    CONST       shift, and go to state 14
    CLASS       shift, and go to state 15
    STRUCT      shift, and go to state 16
    IDENTIFIER  shift, and go to state 17

    declaration                go to state 18
    declaration_specifiers     go to state 19
    storage_class_specifier    go to state 20
    type_specifier             go to state 21
    struct_or_class_specifier  go to state 22
    struct_or_class            go to state 23
    type_qualifier             go to state 24
    declarator                 go to state 25
    direct_declarator          go to state 26
    pointer                    go to state 27
    external_declaration       go to state 50
    function_definition        go to state 30


State 29

  238 translation_unit: external_declaration •

    $default  reduce using rule 238 (translation_unit)


State 30

  240 external_declaration: function_definition •

    $default  reduce using rule 240 (external_declaration)


State 31

  166 type_qualifier_list: type_qualifier •

    $default  reduce using rule 166 (type_qualifier_list)


State 32

  164 pointer: STAR pointer •

    $default  reduce using rule 164 (pointer)


State 33

  163 pointer: STAR type_qualifier_list •
  165        | STAR type_qualifier_list • pointer
  167 type_qualifier_list: type_qualifier_list • type_qualifier

    STAR   shift, and go to state 3
    CONST  shift, and go to state 14

    $default  reduce using rule 163 (pointer)

    type_qualifier  go to state 51
    pointer         go to state 52


State 34

  156 direct_declarator: LROUND declarator • RROUND

    RROUND  shift, and go to state 53


State 35

  101 declaration: declaration_specifiers SEMICOLON •

    $default  reduce using rule 101 (declaration)


State 36

  102 declaration: declaration_specifiers init_declarator_list • SEMICOLON
  110 init_declarator_list: init_declarator_list • COMMA init_declarator

    SEMICOLON  shift, and go to state 54
    COMMA      shift, and go to state 55


State 37

  109 init_declarator_list: init_declarator •

    $default  reduce using rule 109 (init_declarator_list)


State 38

  111 init_declarator: declarator •
  112                | declarator • ASSIGN initializer
  245 function_definition: declaration_specifiers declarator • compound_statement

    ASSIGN  shift, and go to state 56
    LCURLY  shift, and go to state 44

    $default  reduce using rule 111 (init_declarator)

    compound_statement  go to state 57


State 39

  104 declaration_specifiers: storage_class_specifier declaration_specifiers •

    $default  reduce using rule 104 (declaration_specifiers)


State 40

  106 declaration_specifiers: type_specifier declaration_specifiers •

    $default  reduce using rule 106 (declaration_specifiers)


State 41

  241 external_declaration: struct_or_class_specifier SEMICOLON •

    $default  reduce using rule 241 (external_declaration)


State 42

  124 struct_or_class_specifier: struct_or_class IDENTIFIER • LCURLY struct_or_class_member_list RCURLY
  125                          | struct_or_class IDENTIFIER •

    LCURLY  shift, and go to state 58

    $default  reduce using rule 125 (struct_or_class_specifier)


State 43

  108 declaration_specifiers: type_qualifier declaration_specifiers •

    $default  reduce using rule 108 (declaration_specifiers)


State 44

  215 compound_statement: LCURLY • RCURLY
  216                   | LCURLY • statement_list RCURLY
  217                   | LCURLY • declaration_list RCURLY
  218                   | LCURLY • declaration_list statement_list RCURLY
